# PW_hw8

hw8/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  app.py  collection-0--8183953558395046477.wt  collection-0-5707346219406626396.wt  collection-2-5707346219406626396.wt  collection-3--8183953558395046477.wt  collection-4-5707346219406626396.wt  collection-5--8183953558395046477.wt  consumer.py  index-1--8183953558395046477.wt  index-1-5707346219406626396.wt  index-2--8183953558395046477.wt  index-3-5707346219406626396.wt  index-4--8183953558395046477.wt  index-5-5707346219406626396.wt  index-6--8183953558395046477.wt  index-6-5707346219406626396.wt  main.py  models.py  producer.py  pyproject.toml  seed.py  sizeStorer.wt
hw8/diagnostic.data/: metrics.2024-03-08T16-46-10Z-00000  metrics.2024-03-08T16-51-51Z-00000  metrics.2024-03-10T16-59-10Z-00000  metrics.interim
